<?xml version="1.0" encoding="utf-8"?>

<!-- Plant a Tree view  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"

    tools:context=".presentation.plantTree.PlantTreeActivity">

    <ScrollView
        android:id="@+id/primScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Heading and subtitle  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <TextView
                    style="@style/text_heading_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/plant_a_tree_2"
                    android:textSize="28sp"/>

                <TextView
                    style="@style/text_heading_2"
                    android:textSize="14sp"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_planet_b" />

            </LinearLayout>

            <!-- Tree name TextField  -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"

                android:layout_width="match_parent"
                android:layout_height="70dp"

                android:layout_margin="14dp"
                android:hint="@string/tree_name"
                android:textColorHint="@color/colorAccent"
                app:boxCornerRadiusBottomEnd="14dp"

                app:boxCornerRadiusBottomStart="14dp"

                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"

                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/text_heading_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:outlineAmbientShadowColor="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date picker button  -->
            <Button
                android:id="@+id/select_date_button"

                style="@style/Widget.Material3.Button.OutlinedButton"
                android:height="70dp"

                android:textSize="18dp"
                android:textColor="@color/colorAccent"
                android:textAlignment="textStart"

                app:cornerRadius="12dp"

                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_date"/>

            <!-- Take a picture card button  -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="180dp"

                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="22dp"

                app:cardBackgroundColor="@color/colorAccent"

                app:cardCornerRadius="18dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:src="@drawable/btn_camera" />

                    <TextView
                        style="@style/text_heading_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:text="@string/take_a_picture"
                        android:textColor="@color/white"
                        android:textSize="32sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Choose manually layout  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"

                android:orientation="vertical">

                <TextView
                    style="@style/text_heading_1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="8dp"

                    android:text="@string/or_choose_manually"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ChoseManualRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

            <!-- Map View  -->
            <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"

                android:layout_margin="14dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:id="@+id/container"
                android:layout_width="match_parent"

                map:strokeColor="@color/colorSecondary"
                map:strokeWidth="2dp"

                android:layout_height="200dp"/>

            <!-- Location text field  -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"

                android:layout_marginLeft="14dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="14dp"

                android:hint="@string/enter_address"
                android:textColorHint="@color/colorAccent"
                app:boxCornerRadiusBottomEnd="14dp"

                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"

                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"

                app:startIconDrawable="@drawable/ic_pin">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/text_heading_2"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:outlineAmbientShadowColor="@color/colorAccent" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Placeholder View  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="14dp" />

        </LinearLayout>
    </ScrollView>

    <!-- Plant Button  -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_plant"

            android:layout_width="match_parent"
            android:layout_height="70dp"

            android:layout_gravity="bottom"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowColor="@color/colorSecondary"

            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"

            android:backgroundTint="@color/colorSecondary"
            app:cornerRadius="12dp"

            android:text="@string/plant_button_text"
            android:textSize="18dp" />

    <!-- Lotte Animation Layout  -->
    <LinearLayout
        android:id="@+id/ll_bg_layer_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_img_card_completion"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="280dp"
            android:layout_height="280dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/seedling_anim" />

        <TextView
            style="@style/text_heading_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_regular"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5dp"
            android:text="You’ve earned 1,000 karma points on planting a seedling."
            android:textColor="@color/background"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_plant_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowDx="10"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/colorSecondary"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/finish_text"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>