<?xml version="1.0" encoding="utf-8"?>

<!-- Plant Fragment view -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"

    android:orientation="vertical"
    android:scrollbars="none"

    tools:context=".presentation.plant.PlantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Heading and subtitle  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:layout_margin="16dp">

            <TextView
                style="@style/text_heading_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/around_you"
                android:textSize="28sp" />

            <TextView
                style="@style/text_heading_2"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_before_too_late" />

        </LinearLayout>

        <!-- Placeholder meter image -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:layout_marginTop="14dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:scaleType="fitXY"

            android:src="@drawable/bq_img_meter" />

        <!-- Layout hosting two cards horizontally  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <!-- CO2 Saved card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="200dp"
                android:layout_height="220dp"

                android:layout_margin="8dp"
                app:cardCornerRadius="18dp"

                app:cardBackgroundColor="@color/colorPrimary"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:orientation="vertical"

                    android:padding="8dp"
                    android:paddingBottom="26dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:fontFamily="@font/ubuntu_medium"

                        android:gravity="center"

                        android:text="@string/co2_saved_number"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:textSize="50sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center"

                        style="@style/text_heading_2"
                        android:text="@string/tons_of_co2_saved"
                        android:textSize="16sp" />
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
            <!-- Plant A Tree card button -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/plantTreeCardButton"

                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_margin="8dp"

                android:clickable="true"
                android:focusable="true"

                app:cardBackgroundColor="@color/colorSecondary"
                app:cardCornerRadius="18dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"

                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"

                        android:layout_marginTop="20dp"
                        android:src="@drawable/btn_plus_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"

                        android:fontFamily="@font/ubuntu_medium"
                        style="@style/text_heading_1"

                        android:gravity="center"
                        android:text="@string/plant_a_tree"
                        android:textColor="@color/white" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <!-- See my Forest card -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="180dp"

            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            app:cardBackgroundColor="@color/colorPrimary"

            app:cardCornerRadius="18dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"

                    android:padding="24dp">

                    <TextView
                        style="@style/text_heading_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:paddingBottom="8dp"
                        android:text="@string/see_my_forest" />

                    <TextView
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:text="@string/climate_change_lengthy_process" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="50dp"
                    android:src="@drawable/btn_forward" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>