<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".presentation.recycle.RecyclingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_primary_color"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_primary_color"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_back" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/text_heading_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reuse_rebuild" />

                <TextView
                    style="@style/text_heading_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/how_to_help_amp_save_the_earth"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="18dp"
                app:contentPadding="12dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="26dp"
                    android:paddingBottom="26dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:text="@string/_10"
                        android:textColor="@color/colorText"
                        android:textSize="60sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:text="Items\nRecycled"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="3">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="18dp"
                    app:strokeWidth="0dp">

                    <TextView
                        style="@style/text_heading_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Something" />
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1.8"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="18dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_medium"
                            android:gravity="center"
                            android:text="45 KG"
                            android:textColor="@color/colorText"
                            android:textSize="40sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_medium"
                            android:gravity="center"
                            android:text="of CO2 saved"
                            android:textColor="@color/colorText"
                            android:textSize="14sp" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/text_heading_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Tips &amp; Articles" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tips_articles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_recycle_tips_layout" />

        <TextView
            style="@style/text_heading_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="How To Recycle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_how_to_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_recycle_layout" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>